--- a/ConfigurationProper/ConfigProper.properties
+++ b/ConfigurationProper/ConfigProper.properties
@@ -2,3 +2,4 @@ drverpath=F:\\supportsoftware\\geckodriver.exe
 implicitwait=
 url=http://www.facebook.com
 defaultBrowser=Chrome
+reportConfigPath=./ConfigurationProper/extent-config.xml
