--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 			</configuration>			
   		
   		</plugin>
-  		 <plugin>
+  		 <!-- <plugin>
                 <groupId>net.masterthought</groupId>
                 <artifactId>maven-cucumber-reporting</artifactId>
                 <version>3.8.0</version>
@@ -49,7 +49,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <projectName>MyProjectName</projectName>  <!-- Replace with project name -->
+                            <projectName>MyProjectName</projectName>  Replace with project name
                             <outputDirectory>${basedir}/cucumber-reports/advanced-reports</outputDirectory>
                             <cucumberOutput>${basedir}/cucumber-reports/CucumberTestReport.json</cucumberOutput>
                             <buildNumber>1</buildNumber>
@@ -57,16 +57,25 @@
                         </configuration>
                     </execution>
                 </executions>
-         </plugin>  		
+         </plugin> -->  		
   	</plugins>
   </build>
   <dependencies>
-  	<dependency>
-  		<groupId>org.testng</groupId>
-  		<artifactId>testng</artifactId>
-  		<version>6.14.2</version>  		
-    	<scope>test</scope>
-  	</dependency>
+	 <dependency>
+		 <groupId>com.vimalselvam</groupId>
+		 <artifactId>cucumber-extentsreport</artifactId>
+		 <version>3.0.2</version>
+	</dependency>
+<!-- <dependency>
+    <groupId>com.vimalselvam</groupId>
+    <artifactId>cucumber-extentsreport</artifactId>
+    <version>3.0.2</version>
+</dependency>
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>3.1.1</version>
+</dependency> -->  
   	<dependency>
   		<groupId>org.seleniumhq.selenium</groupId>
   		<artifactId>selenium-java</artifactId>
@@ -91,11 +100,11 @@
   		<version>1.2.17</version>
   	</dependency>
 
-  	<dependency>
+<!--   	<dependency>
   		<groupId>com.relevantcodes</groupId>
   		<artifactId>extentreports</artifactId>
   		<version>2.41.2</version>
-  	</dependency>
+   	</dependency>-->
   	<dependency>
   		<groupId>org.apache.poi</groupId>
   		<artifactId>poi</artifactId>
@@ -122,6 +131,11 @@
     	<groupId>info.cukes</groupId>
     	<artifactId>cucumber-java</artifactId>
     	<version>1.2.5</version>
+    </dependency>
+    <dependency>
+    	<groupId>junit</groupId>
+    	<artifactId>junit</artifactId>
+    	<version>4.11</version>
     </dependency>
   </dependencies>
 </project>
